--- a/css/style.css
+++ b/css/style.css
@@ -25,25 +25,6 @@
     left: 0;
     right: 0;
     position: absolute;
-    background-image:: url(bg.png) no-repeat center;
-}
-
-@font-face {
-  font-family: 'Rye';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Rye Regular'), local('Rye-Regular'), url(Rye-Regular.woff) format('woff');
-}
-@font-face {
-  font-family: 'Monda';
-  font-style: normal;
-  font-weight: normal;
-  src: local('Monda'), local('Monda-Regular'), url('Monda-Regular.ttf') format('truetype');
-}
-@font-face {
-  font-family: 'Monda';
-  font-style: normal;
-  font-weight: bold;
-  src: local('Monda Bold'), local('Monda-Bold'), url('Monda-Bold.ttf') format('truetype');
+    background-image:: url(imgs/bg.png) no-repeat center;
 }
 
