--- a/css/style.css
+++ b/css/style.css
@@ -1,30 +1,37 @@
+body{
+        background-color: #ff7d88;
+     background-image: url(bg-png);
+     TEXT-ALIGN: center;
 
+}
 
-.days-number  {
+.days-number{
     font-size: 216px;
     font-family: 'Rye', cursive;
     width: auto;
     text-align: center;
+    color: white;
+
 }
 
-.days-label {
-    font-size: 54px;
-}
 
-.seconds {
-    margin-top: 32px;
-    font-size: 20px;
-    font-family: "Monda", Georgia, sans-serif;
+
+.hours ,.seconds ,.minutes {
+    font-size: 100px;
+    font-family: 'Rye', cursive;
     width: auto;
     text-align: center;
+    color: white;
 }
+
+.days-label , .hours-label, .seconds-label, .minutes-label,.text{
+    font-size: 54px;
+    color: white;
+}
+
+
 
 .container {
-    top:0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    position: absolute;
-    background-image:: url(imgs/bg.png) no-repeat center;
-}
 
+}
+    
